<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2023 Matthew Chandler

Permission is hereby granted, free of charge, to any person obtaining a copy of
this software and associated documentation files (the "Software"), to deal in
the Software without restriction, including without limitation the rights to
use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
the Software, and to permit persons to whom the Software is furnished to do so,
subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-->
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Progress Bars</string>
    <string name="app_version" translatable="false">v%1$s</string>
    <string name="app_copyright" translatable="false">© 2023 Matthew Chandler</string>
    <string name="app_license">This program comes with absolutely no warranty.\nSee the <a href="https://opensource.org/licenses/mit-license.php">MIT License (MIT)</a> for details.</string>
    <string name="app_website"><a href="https://www.github.com/mattvchandler/ProgressBars">Progress Bars on Github</a></string>
    <string name="app_logo_desc">Progress Bars logo</string>

    <plurals name="second">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>

    <plurals name="minute">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <plurals name="hour">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="day">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="week">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>

    <plurals name="month">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>

    <plurals name="year">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>

    <string-array name="time_units">
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>

    <string name="on">on</string>
    <string name="and">and</string>

    <string name="edit_title">Edit timer</string>
    <string name="add_title">Add new timer</string>
    <string name="add_title_short">Add timer</string>

    <string name="about">About</string>

    <string name="settings">Settings</string>

    <string name="pref_date_format_title">Date format</string>
    <string-array name="pref_date_format_display">
        <item>Locale Default</item>
        <item>YYYY-MM-DD</item>
    </string-array>

    <string name="pref_first_day_of_wk_title">Start of the week</string>
    <string-array name="pref_first_day_of_wk_display">
        <item>Locale Default</item>
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
    </string-array>

    <string name="pref_system_notifications">Notification settings</string>

    <string name="pref_widget_refresh_title">Desktop widget refresh rate</string>
    <string-array name="pref_widget_refresh_display">
        <item>5 seconds</item>
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>15 minute</item>
        <item>30 minutes</item>
        <item>Hourly</item>
        <item>Daily</item>
    </string-array>

    <string name="pref_widget_text_color_title">Desktop widget text color</string>
    <string-array name="pref_widget_text_color_display" tools:ignore="InconsistentArrays">
        <item>White</item>
        <item>Black</item>
    </string-array>

    <string name="pref_widget_bg_title">Desktop widget background</string>

    <string name="pref_theme_title">Day / Night Theme</string>
    <string-array name="pref_theme_display" tools:ignore="InconsistentArrays">
        <item>Follow System</item>
        <item>Day</item>
        <item>Night</item>
        <item>Auto (location / time based)</item>
    </string-array>
    <string name="loc_perm_title">"Allow access to location?"</string>
    <string name="loc_perm_msg">"You will be asked to allow location access.\n\nIf granted, your location will be used to switch the theme at local sunrise / sunset. Otherwise, hard-coded times will be used instead.\n\nLocation data is not stored or used in any other way."</string>

    <string name="notification_channel_name">Default timer start / end</string>
    <string name="notification_channel_desc">Default notifications for when a timer starts or completes</string>
    <string name="notification_channel_group_name">Timer-specific settings</string>

    <string-array name="day_of_week_abbr">
        <item>U</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>R</item>
        <item>F</item>
        <item>S</item>
    </string-array>

    <string-array name="day_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="invalid_date">"Invalid date: %1$s. Correct format is: %2$s"</string>
    <string name="invalid_time">"Invalid time: %1$s. Correct format is: %2$s"</string>
    <string name="end_before_start_err">Error: End date/time is before start date/time</string>

    <string name="start_time">Start time:</string>
    <string name="end_time">End Time:</string>

    <string name="add_butt_title">Add new timer</string>
    <string name="save_butt_title">Save timer</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>

    <string name="timer_title">Timer title</string>
    <string name="pre_text">Pre-start text</string>
    <string name="start_text">Starting text</string>
    <string name="countdown_text">Countdown_text</string>
    <string name="complete_text">Completion text</string>
    <string name="post_text">Post-end text</string>
    <string name="single_pre_text">Pre-event text</string>
    <string name="single_complete_text">Event reached text</string>
    <string name="single_post_text">Post-event text</string>

    <string name="separate_time">Separate start and end times</string>
    <string name="single_date_txt">Date</string>
    <string name="single_time_txt">Time</string>
    <string name="single_tz_prompt">Time zone</string>

    <string name="start_date_txt">Start date</string>
    <string name="start_time_txt">Start time</string>
    <string name="start_tz_prompt">Start time zone</string>

    <string name="end_date_txt">End date</string>
    <string name="end_time_txt">End time</string>
    <string name="end_tz_prompt">End time zone</string>

    <string name="choose_tz">Choose a Time Zone</string>
    <string name="tz_list_subtitle">%1$s (%2$s)</string>

    <string name="repeat">Repeat</string>
    <string name="repeat_every">every</string>
    <string name="repeat_unit_prompt">Repetition units</string>
    <string name="invalid_repeat_count">Invalid repeat count. Must be > 0</string>
    <string name="days_of_week_title">Days of week to repeat on</string>
    <string name="no_days_of_week_err">Error: No days selected</string>

    <string name="start_clock_butt">Choose start time from a clock</string>
    <string name="start_cal_butt">Choose start date from a calendar</string>
    <string name="end_clock_butt">Choose end time from a clock</string>
    <string name="end_cal_butt">Choose end date from a calendar</string>

    <string name="precision">Number of decimal places shown</string>

    <string name="show_elements_header">Information to display</string>
    <string name="show_units_header">Units of time to display</string>
    <string name="countdown_text_header">Countdown messages</string>

    <string name="notification_settings">Notification settings</string>
    <string name="notification_reset">Reset notification settings</string>
    <string name="notification_reset_msg">Notification settings reset to default</string>

    <string name="notification_priority_label">Notification priority</string>
    <string-array name="notification_priority_levels_disp">
        <item>Minimum</item>
        <item>Low</item>
        <item>Default</item>
        <item>High</item>
        <item>Maximum</item>
    </string-array>

    <string-array name="show_elements">
        <item>Progress bar</item>
        <item>Start time</item>
        <item>End time</item>
    </string-array>

    <string name="single_show_element">Show event time</string>

    <string name="terminate">Stop timer when completed</string>
    <string name="single_terminate">Stop countdown when event reached</string>
    <string name="start_notify">Send notification on start</string>
    <string name="end_notify">Send notification on completion</string>
    <string name="single_notify">Send notification on event</string>

    <string name="default_title">New timer</string>
    <string name="default_pre_text">"Time until start: "</string>
    <string name="default_start_text">Started</string>
    <string name="default_countdown_text">"Time remaining: "</string>
    <string name="default_complete_text">Completed</string>
    <string name="default_post_text">"Time since completion: "</string>
    <string name="default_single_complete_text">Event reached</string>
    <string name="default_single_pre_text">"Time until event: "</string>
    <string name="default_single_post_text">"Time since event: "</string>

    <string name="loading">Loading…</string>

    <string name="prompt_exact_alarm">Allow timers to be sent exactly when a timer ends?</string>
</resources>
