<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (C) 2020 Matthew Chandler

Permission is hereby granted, free of charge, to any person obtaining a copy of
this software and associated documentation files (the "Software"), to deal in
the Software without restriction, including without limitation the rights to
use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
the Software, and to permit persons to whom the Software is furnished to do so,
subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.mattvchandler.progressbars.settings.Countdown_text"
    >

    <data>
        <import type="android.view.View"/>
        <import type="org.mattvchandler.progressbars.db.Data"/>
        <variable name="data" type="Data"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ScrollView
            android:id="@+id/main_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="?attr/actionBarSize"
            android:clipToPadding="false"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true"
                >
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ShortSettingFrame"
                    android:hint="@string/pre_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{data.separate_time ? View.VISIBLE : View.GONE}"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pre_text"
                        android:text="@{data.pre_text}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:selectAllOnFocus="true"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ShortSettingFrame"
                    android:hint="@string/start_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{data.separate_time ? View.VISIBLE : View.GONE}"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/start_text"
                        android:text="@{data.start_text}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:selectAllOnFocus="true"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ShortSettingFrame"
                    android:hint="@string/countdown_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{data.separate_time ? View.VISIBLE : View.GONE}"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/countdown_text"
                        android:text="@{data.countdown_text}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:selectAllOnFocus="true"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ShortSettingFrame"
                    android:hint="@string/complete_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{data.separate_time ? View.VISIBLE : View.GONE}"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/complete_text"
                        android:text="@{data.complete_text}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:selectAllOnFocus="true"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ShortSettingFrame"
                    android:hint="@string/post_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{data.separate_time ? View.VISIBLE : View.GONE}"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/post_text"
                        android:text="@{data.post_text}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:selectAllOnFocus="true"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ShortSettingFrame"
                    android:hint="@string/single_pre_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{data.separate_time ? View.GONE : View.VISIBLE}"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/single_pre_text"
                        android:text="@{data.single_pre_text}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:selectAllOnFocus="true"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ShortSettingFrame"
                    android:hint="@string/single_complete_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{data.separate_time ? View.GONE : View.VISIBLE}"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/single_complete_text"
                        android:text="@{data.single_complete_text}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:selectAllOnFocus="true"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ShortSettingFrame"
                    android:hint="@string/single_post_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{data.separate_time ? View.GONE : View.VISIBLE}"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/single_post_text"
                        android:text="@{data.single_post_text}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:selectAllOnFocus="true"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <include
                layout="@layout/toolbar"
                android:id="@+id/toolbar"
                />
        </com.google.android.material.appbar.AppBarLayout>
    </FrameLayout>
</layout>
